src/objects/UC_DSI__c.object
<CustomObject>
    <fields>
        <fullName>DSI__c</fullName>
        <label>DSI</label>
        <referenceTo>DSI__c</referenceTo>
        <relationshipLabel>Codes</relationshipLabel>
        <relationshipName>UC_DSIs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Instance_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instance Configuration</label>
        <referenceTo>Enterprise_Configuration__c</referenceTo>
        <relationshipLabel>UC DSIs</relationshipLabel>
        <relationshipName>UC_DSIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Universal_Code__c</fullName>
        <label>Universal Code</label>
        <referenceTo>Universal_Code__c</referenceTo>
        <relationshipLabel>UC DSIs</relationshipLabel>
        <relationshipName>UC_DSIs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UC DSI</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UC DSI-{0000000}</displayFormat>
        <label>UC DSI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UC DSIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>